--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
 
       <div class="carousel-container">
         <div class="mySlides animate">
-          <a href="firstproject.html"><img src="/project1.png" alt="slide" /></a>
+          <a href="firstproject.html"><img src="project1.png" alt="slide" /></a>
           <div class="number">1 / 5</div>
         </div>
 
         <div class="mySlides animate">
-          <a href="secondproject.html"><img src="/project2.jpg" alt="slide" /></a>
+          <a href="secondproject.html"><img src="project2.jpg" alt="slide" /></a>
           <div class="number">2 / 5</div>
         </div>
 
         <div class="mySlides animate">
-          <a href="thirdproject.html"><img src="/project3.png" alt="slide" /></a>
+          <a href="thirdproject.html"><img src="project3.png" alt="slide" /></a>
           <div class="number">3 / 5</div>
         </div>
 
         <div class="mySlides animate">
-          <a href="fourthproject.html"><img src="/project4.png" alt="slide" /></a>
+          <a href="fourthproject.html"><img src="project4.png" alt="slide" /></a>
           <div class="number">4 / 5</div>
         </div>
 
