--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
           </div>
           <div class="text-container">
             <p>
-              Табылдиева Айжамал</br>
-              Год рождения: 29.06.2004 г. </br>
+              Табылдиева Айжамал, 19 лет</br>
               Место проживания: Кыргызстан, г. Бишкек</br>
-              Студент 2 курса специальности «Веб-информатика»</br> Кыргызско-Германского института прикладной информатики
+              Студент 2 курса специальности «Веб-информатика»</br> 
+              Кыргызско-Германского института прикладной информатики
             </p>
           </div>
         </div>
